force-app/main/default/objects/Enquiry_Interest__c.object
<CustomObject>
    <description>stores one or more interests registered against an Enquiry</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <externalId>true</externalId>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <label>Attendance Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Campus</fullName>
                </value>
                <value>
                    <fullName>Off Campus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <description>all enquiry interests are derived from a case record</description>
        <label>Enquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Enquiry Interests</relationshipLabel>
        <relationshipName>Enquiry_Interests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Commencement_Year__c</fullName>
        <description>The year that a person is interested to commence their study</description>
        <label>Commencement Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>Nov 2020</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Managing_Faculty__c</fullName>
        <description>pulls managing faculty through to enquiry interest, or , if no course linked then presents the text field equivalent if keyed in at Enquiry Interest level</description>
        <formula>IF(NOT(ISBLANK( Course__c )),
 TEXT(Course__r.Managing_Faculty__c) ,  Managing_Faculty__c )</formula>
        <label>Course Managing Faculty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title_Text__c</fullName>
        <description>placeholder for legacy data, and surfaced via formula field</description>
        <label>Course Title Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <description>for use in the console sidebar view</description>
        <formula>IF(
NOT(ISBLANK(Course__r.Course_Description__c )),
Course__r.Course_Description__c,
   IF(NOT(ISBLANK(Course_Title_Text__c)), Course_Title_Text__c,
&quot;&quot;))</formula>
        <label>Course Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>if person is interested in a specific course, this field links to that course record.</description>
        <label>Course</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Course__c.Depreciated__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Course__c</referenceTo>
        <relationshipLabel>Enquiry Interests</relationshipLabel>
        <relationshipName>Enquiry_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Detailed_Study_Area__c</fullName>
        <label>Detailed Study Area</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Study_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Aeronautical engineering</fullName>
                </value>
                <value>
                    <fullName>Aerospace engineering</fullName>
                </value>
                <value>
                    <fullName>Biological engineering</fullName>
                </value>
                <value>
                    <fullName>Chemical engineering</fullName>
                </value>
                <value>
                    <fullName>Civil engineering</fullName>
                </value>
                <value>
                    <fullName>Computer science</fullName>
                </value>
                <value>
                    <fullName>Computer systems engineering</fullName>
                </value>
                <value>
                    <fullName>Electrical engineering</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Engineering technology</fullName>
                </value>
                <value>
                    <fullName>Environmental engineering</fullName>
                </value>
                <value>
                    <fullName>Industrial engineering</fullName>
                </value>
                <value>
                    <fullName>Infrastructure engineering</fullName>
                </value>
                <value>
                    <fullName>Maintenance engineering</fullName>
                </value>
                <value>
                    <fullName>Materials engineering</fullName>
                </value>
                <value>
                    <fullName>Mechanical engineering</fullName>
                </value>
                <value>
                    <fullName>Mechatronics engineering</fullName>
                </value>
                <value>
                    <fullName>Mining engineering</fullName>
                </value>
                <value>
                    <fullName>Pulp and paper technologies</fullName>
                </value>
                <value>
                    <fullName>Robotics</fullName>
                </value>
                <value>
                    <fullName>Software engineering</fullName>
                </value>
                <value>
                    <fullName>Traffic engineering</fullName>
                </value>
                <value>
                    <fullName>Transport engineering</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Actuarial studies</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Business administration</fullName>
                </value>
                <value>
                    <fullName>Business information systems</fullName>
                </value>
                <value>
                    <fullName>Business statistics</fullName>
                </value>
                <value>
                    <fullName>Business strategy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Faculty_Code__c</fullName>
        <formula>Course__r.Faculty_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faculty Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Description__c</fullName>
        <formula>Course__r.Faculty_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Faculty Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_PickList__c</fullName>
        <description>used to populate the Enquiry Interest Faculty on Enquiry Interest</description>
        <label>Faculty</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Art, Design and Architecture</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Business and Economics</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Information Technology</fullName>
                </value>
                <value>
                    <fullName>Law</fullName>
                </value>
                <value>
                    <fullName>Medicine, Nursing and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Monash College</fullName>
                </value>
                <value>
                    <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedCustom__c</fullName>
        <description>require a custom datetime stamp for use on console remoting WHERE clause - known limitation of remoting SOQL</description>
        <formula>LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LastModifiedCustom</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Level_of_Study__c</fullName>
        <description>migrated over from original UniCRM v1.  Can be manually populated when creating an enquiry interest, or might be populated via a webform. Refers to the level of study a person is interested in undertaking.</description>
        <label>Level of Study</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Postgraduate</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>English Language</fullName>
                </value>
                <value>
                    <fullName>Monash University Foundation Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>the location a person is interested in studying at i.e. the preferred campus.</description>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alfred</fullName>
                </value>
                <value>
                    <fullName>Berwick</fullName>
                </value>
                <value>
                    <fullName>Caulfield</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>Clayton</fullName>
                </value>
                <value>
                    <fullName>Gippsland</fullName>
                </value>
                <value>
                    <fullName>Parkville</fullName>
                </value>
                <value>
                    <fullName>Peninsula</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managing_Faculty_Code__c</fullName>
        <label>Managing Faculty Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managing_Faculty__c</fullName>
        <description>Migrated over from original UniCRM, this field captures either the manually selected Faculty of interest if the Faculty picklist is used, or the inferred faculty of interest if a course is selected.</description>
        <label>Managing Faculty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Matching_ID__c</fullName>
        <externalId>true</externalId>
        <label>Matching ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mode__c</fullName>
        <description>The mode of study a person is interested in doing i.e. full time or part time.</description>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FT</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Institution__c</fullName>
        <description>mapped over by apex from case, when web channel used</description>
        <label>Name of Institution</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OriginalId__c</fullName>
        <description>used for external data mapping activities</description>
        <externalId>true</externalId>
        <label>OriginalId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enquiry Interests</relationshipLabel>
        <relationshipName>Enquiry_Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialisation__c</fullName>
        <label>Specialisation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specialisation_f__c</fullName>
        <description>surfaces the specialisation selected at time of course selection</description>
        <formula>IF(
   NOT(ISBLANK(Course__r.Specialisation__c)),
                                             Course__r.Specialisation__c, Case__r.Course_Specialisation__c  
)</formula>
        <label>Specialisation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Study_Area_Picklist__c</fullName>
        <label>Study Area Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Communication and media</fullName>
                </value>
                <value>
                    <fullName>Design, creative art, architecture</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environment and sustainability</fullName>
                </value>
                <value>
                    <fullName>Humanities and culture</fullName>
                </value>
                <value>
                    <fullName>Information technology</fullName>
                </value>
                <value>
                    <fullName>Law, policy</fullName>
                </value>
                <value>
                    <fullName>Medicine, health, pharmacy</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Study_Area__c</fullName>
        <label>Study Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Communication and media</fullName>
                </value>
                <value>
                    <fullName>Design, creative art, architecture</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environment and sustainability</fullName>
                </value>
                <value>
                    <fullName>Humanities and culture</fullName>
                </value>
                <value>
                    <fullName>Information technology</fullName>
                </value>
                <value>
                    <fullName>Law, policy</fullName>
                </value>
                <value>
                    <fullName>Medicine, health, pharmacy</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valid_Enquiry_Interest__c</fullName>
        <formula>/*NOT(AND(
ISBLANK(Study_Area__c),
ISBLANK(Managing_Faculty_Code__c)
))*/
true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid Enquiry Interest</label>
        <type>Checkbox</type>
    </fields>
    <label>Enquiry Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course__c</columns>
        <columns>Course_Managing_Faculty__c</columns>
        <columns>Course_Title__c</columns>
        <columns>Case__c</columns>
        <columns>Faculty_PickList__c</columns>
        <columns>Faculty_Code__c</columns>
        <columns>Faculty_Description__c</columns>
        <columns>LastModifiedCustom__c</columns>
        <columns>Location__c</columns>
        <columns>Managing_Faculty__c</columns>
        <columns>Managing_Faculty_Code__c</columns>
        <columns>Person__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INT-{000000}</displayFormat>
        <label>Enquiry Interest Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiry Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Course_or_Study_Area_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 ISBLANK( Course__c ),
 ISBLANK( TEXT( Study_Area__c ))
)</errorConditionFormula>
        <errorMessage>Please provide Course OR Study Area to save this record.</errorMessage>
    </validationRules>
</CustomObject>